// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entry should produce correct entries with default options for legacy browsers in development mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "@babel/polyfill",
      "index.js",
    ],
  },
}
`;

exports[`entry should produce correct entries with default options for legacy browsers in production mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "@babel/polyfill",
      "index.js",
    ],
  },
}
`;

exports[`entry should produce correct entries with default options for modern browsers in development mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "index.js",
    ],
  },
}
`;

exports[`entry should produce correct entries with default options for modern browsers in production mode 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "index.js",
    ],
  },
}
`;

exports[`entry should work with \`entries\` arguments object 1`] = `
Object {
  "entry": Object {
    "main": Array [
      "index.js",
    ],
  },
}
`;

exports[`entry should work with \`entries\` arguments string 1`] = `
Object {
  "entry": Object {
    "index": Array [
      "index.js",
    ],
  },
}
`;
